# sneakpeek-demo

./: Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demo/: app.py  demo_scraper.py
